--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="/index.html">Reading to Learn</a>
+                  <a class="navbar-brand" href="/reading-to-learn/index.html">Reading to Learn</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -22,13 +22,13 @@
                         <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/background.html">Background</a>
+                        <a class="nav-link" href="/reading-to-learn/background.html">Background</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/tools.html">Tools</a>
+                        <a class="nav-link" href="/reading-to-learn/tools.html">Tools</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/my-blog.html">My Blog</a>
+                        <a class="nav-link" href="/reading-to-learn/my-blog.html">My Blog</a>
                       </li>
                     </ul>
                   </div>
