--- a/my-blog.html
+++ b/my-blog.html
@@ -12,23 +12,23 @@
         <header>
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="/index.html">Reading to Learn</a>
+                  <a class="navbar-brand" href="https://jamiepalatnik.github.io/reading-to-learn/">Reading to Learn</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="https://jamiepalatnik.github.io/reading-to-learn/">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/background.html">Background</a>
+                        <a class="nav-link" href="https://jamiepalatnik.github.io/reading-to-learn/background">Background</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/tools.html">Tools</a>
+                        <a class="nav-link" href="https://jamiepalatnik.github.io/reading-to-learn/tools">Tools</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="/my-blog.html">My Blog</a>
+                        <a class="nav-link active" href="https://jamiepalatnik.github.io/reading-to-learn/my-blog">My Blog</a>
                       </li>
                     </ul>
                   </div>
