Fixed broken link on tools.html

--- a/tools.html
+++ b/tools.html
@@ -39,7 +39,7 @@
             <h1>Tools</h1>
             <p>On this page I will discuss my reading workflow and the tools I use.</p>
             <p>My library cards are probably my most valuable reading tool, since I check out most of the books I read from public libraries. A few years ago I got a Kindle Paperwhite, and now I'm reading mainly ebooks that I check out from the library using the Libby app.</p>
-            <p>That's pretty much all I need, although I also love pillows, a cozy blanket, snacks, and drinks for the most cozy reading sessions. I keep a reading list on my Notes app with books I'd like to read, and I report on many of the books I've read on <a href="/my-blog.html">my blog.</a></p>
+            <p>That's pretty much all I need, although I also love pillows, a cozy blanket, snacks, and drinks for the most cozy reading sessions. I keep a reading list on my Notes app with books I'd like to read, and I report on many of the books I've read on <a href="https://jamiepalatnik.github.io/reading-to-learn/my-blog">my blog.</a></p>
         </main>
         <footer class="fixed-bottom p-2 bg-light">
             This site was created to complete the <a href="https://cs50.harvard.edu/x/2024/psets/8/homepage/">Homepage</a> assignment from CS50x.
